--- a/tests/clean_order.ipynb
+++ b/tests/clean_order.ipynb
@@ -7,18 +7,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is cell one\n"
+     ]
     }
    ],
    "source": [
-    "1"
+    "print(\"this is cell one\")"
    ]
   },
   {
@@ -28,18 +25,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is cell cell two\n"
+     ]
     }
    ],
    "source": [
-    "2"
+    "print(\"this is cell cell two\")"
    ]
   },
   {
@@ -49,18 +43,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is cell three\n"
+     ]
     }
    ],
    "source": [
-    "3"
+    "print(\"this is cell three\")"
    ]
   },
   {
@@ -70,18 +61,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is cell four\n"
+     ]
     }
    ],
    "source": [
-    "4"
+    "print(\"this is cell four\")"
    ]
   },
   {
@@ -91,18 +79,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is cell five\n"
+     ]
     }
    ],
    "source": [
-    "5"
+    "print(\"this is cell five\")"
    ]
   }
  ],
